--- a/public/index.html
+++ b/public/index.html
@@ -1348,9 +1348,10 @@
         }
 
         .ingredient-card img {
-            width: 150px;
-            height: 150px;
-            object-fit: cover;
+            width: 100%;
+            max-width: 220px;
+            height: auto;
+            object-fit: contain;
             border-radius: 16px;
             flex-shrink: 0;
         }
