--- a/public/index.html
+++ b/public/index.html
@@ -2049,6 +2049,7 @@
                         </div>
                         <div class="category-content">
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Broccoli.png" alt="Broccoli" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Broccoli</h4>
                                     <p>Fiber, vitamin C, cancer-fighting sulforaphane</p>
@@ -2056,6 +2057,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Broccoli, cooked')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Carrots.png" alt="Carrots" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Carrots</h4>
                                     <p>Beta-carotene for eyes, fiber, dental health</p>
@@ -2063,6 +2065,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Carrots, cooked')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Green Beans.png" alt="Green Beans" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Green Beans</h4>
                                     <p>Low-cal fiber, vitamins K & C, weight management</p>
@@ -2070,6 +2073,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Green beans, cooked')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Peas.png" alt="Peas" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Peas</h4>
                                     <p>Protein, fiber, vitamins A/K, lutein for eyes</p>
@@ -2077,6 +2081,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Peas, green, cooked')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Sweet Potato.png" alt="Sweet Potato" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Sweet Potato</h4>
                                     <p>Fiber, beta-carotene, vitamin B6, digestive health</p>
@@ -2084,6 +2089,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Sweet potato, cooked')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Pumpkin.png" alt="Pumpkin" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Pumpkin</h4>
                                     <p>Digestive aid, fiber for diarrhea/constipation</p>
@@ -2091,6 +2097,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Pumpkin, canned')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Spinach.png" alt="Spinach" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Spinach</h4>
                                     <p class="warning-text">Iron, antioxidants - limit due to oxalates</p>
@@ -2098,6 +2105,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Spinach, cooked')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Zuchinni.png" alt="Zucchini" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Zucchini</h4>
                                     <p>Low-cal, potassium, vitamin C</p>
@@ -2105,6 +2113,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Zucchini, cooked')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Butternut Squash.png" alt="Butternut Squash" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Butternut Squash</h4>
                                     <p>Beta-carotene, fiber, potassium</p>
@@ -2112,6 +2121,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Butternut squash, cooked')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Celery.png" alt="Celery" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Celery</h4>
                                     <p>Fresh breath, vitamins A/C/K, low calorie</p>
