--- a/public/index.html
+++ b/public/index.html
@@ -1494,6 +1494,31 @@
         .status-card-large p {
             color: rgba(255, 255, 255, 0.8);
         }
+
+        /* Sticky Disclaimer */
+        .sticky-disclaimer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(15, 23, 42, 0.95);
+            backdrop-filter: blur(10px);
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            padding: 12px 20px;
+            text-align: center;
+            z-index: 1000;
+            font-size: 0.85rem;
+            color: rgba(255, 255, 255, 0.7);
+        }
+
+        .sticky-disclaimer strong {
+            color: #f59e0b;
+        }
+
+        /* Add padding to body so content isn't hidden behind disclaimer */
+        .app-container {
+            padding-bottom: 60px;
+        }
     </style>
 </head>
 <body>
@@ -2139,6 +2164,7 @@
                         </div>
                         <div class="category-content">
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Blueberries.png" alt="Blueberries" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Blueberries</h4>
                                     <p>Antioxidant superfood, brain health, UTI prevention</p>
@@ -2146,6 +2172,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Blueberries, raw')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Cranberries.png" alt="Cranberries" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Cranberries</h4>
                                     <p>Urinary tract health, prevents bacteria adhesion</p>
@@ -2153,6 +2180,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Cranberries, raw')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Apples.png" alt="Apples" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Apples (no seeds)</h4>
                                     <p>Fiber, vitamins A/C, dental cleaning</p>
@@ -2160,6 +2188,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Apples, raw')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Bananas.png" alt="Bananas" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Bananas</h4>
                                     <p class="warning-text">Potassium, B6, fiber - high sugar, use sparingly</p>
@@ -2167,6 +2196,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Bananas, raw')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Watermelon.png" alt="Watermelon" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Watermelon (no seeds)</h4>
                                     <p>Hydration, vitamins A/B6/C, lycopene</p>
@@ -2174,6 +2204,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Watermelon, raw')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Strawberries.png" alt="Strawberries" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Strawberries</h4>
                                     <p>Vitamin C, fiber, teeth-whitening enzymes</p>
@@ -4508,5 +4539,10 @@
     </script>
     <!-- Chart.js for visualizations -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <!-- Sticky Disclaimer -->
+    <div class="sticky-disclaimer">
+        <strong>Disclaimer:</strong> Not a substitute for actual veterinary advice. Consult with your trusted veterinarian before making any dietary changes to your pet's feeding routine.
+    </div>
 </body>
 </html>
