--- a/public/index.html
+++ b/public/index.html
@@ -2443,6 +2443,7 @@
                         </div>
                         <div class="category-content">
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Chia Seeds.png" alt="Chia Seeds" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Chia Seeds</h4>
                                     <p>Omega-3, fiber, calcium, protein</p>
@@ -2450,6 +2451,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Chia seeds')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Hemp Seeds.png" alt="Hemp Seeds" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Hemp Seeds</h4>
                                     <p>Complete protein, omega-3/6, GLA</p>
@@ -2457,6 +2459,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Hemp seeds')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Flax Seed.png" alt="Flax Seeds" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Flax Seeds (ground)</h4>
                                     <p>Omega-3, fiber, lignans - must be ground to absorb</p>
@@ -2464,6 +2467,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Flaxseed, ground')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Turmeric.png" alt="Turmeric" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Turmeric</h4>
                                     <p>Anti-inflammatory curcumin, joint support</p>
@@ -2471,6 +2475,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Turmeric, ground')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Local Honey.png" alt="Local Honey" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Local Honey</h4>
                                     <p class="warning-text">Allergy relief, antibacterial - use sparingly (high sugar)</p>
@@ -2478,6 +2483,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Honey')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Parsley.png" alt="Parsley" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Parsley</h4>
                                     <p>Fresh breath, vitamins A/C/K, antioxidants</p>
@@ -2485,6 +2491,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Parsley, fresh')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Eggshell Powder.png" alt="Eggshell Powder" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Eggshell Powder</h4>
                                     <p>Calcium supplement - 1,800mg calcium per teaspoon</p>
@@ -2492,6 +2499,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Eggshell powder')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Pumpkin Seeds.png" alt="Pumpkin Seeds" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Pumpkin Seeds</h4>
                                     <p>Zinc, natural anti-parasitic properties</p>
@@ -2499,6 +2507,7 @@
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Pumpkin seeds')">+ Add</button>
                             </div>
                             <div class="ingredient-card glass-dark">
+                                <img src="images/ingredients/Bone Broth.png" alt="Bone Broth" class="ingredient-img">
                                 <div class="ingredient-info">
                                     <h4>Bone Broth</h4>
                                     <p>Joint support, gut healing, hydration</p>
